--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,29 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Abstract-Meta-Class
-version:      0.03
-version_from: lib/Abstract/Meta/Class.pm
-installdirs:  site
+version:      0.04
+author:
+  - 'Adrian Witas <adrian@webapp.strefa.pl>'
+abstract: Simple meta object protocol implementation.
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
     Carp:                    0
-
+build_requires:
+    Test::Pod:               0
+    Test::Pod::Coverage:     0
+version_from: lib/Abstract/Meta/Class.pm
+installdirs:  site
+provides:
+Abstract::Meta::Class:
+  file: lib/Abstract/Meta/Class.pm
+Abstract::Meta::Attribute:
+  file: lib/Abstract/Meta/Attribute.pm
+Abstract::Meta::Class:
+  file: lib/Abstract/Meta/Class.pm
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
