--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,6 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Abstract-Meta-Class
-version:      0.06
+--- #YAML:1.0
+name: Abstract-Meta-Class
+version: 0.07
 author:
   - 'Adrian Witas <adrian@webapp.strefa.pl>'
 abstract: Simple meta object protocol implementation.
@@ -9,21 +8,24 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
-    Carp:                    0
+  perl: 5.6.1
+  Carp: 0
 build_requires:
-    Test::Pod:               0
-    Test::Pod::Coverage:     0
-version_from: lib/Abstract/Meta/Class.pm
-installdirs:  site
+  Test::Pod: 0
+  Test::Pod::Coverage: 0
 provides:
 Abstract::Meta::Class:
   file: lib/Abstract/Meta/Class.pm
+  version: 0.07
 Abstract::Meta::Attribute:
   file: lib/Abstract/Meta/Attribute.pm
+  version: 0.03
 Abstract::Meta::Class:
   file: lib/Abstract/Meta/Class.pm
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+  version: 0.04
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+   version: 1.3
+   url: http://module-build.sourceforge.net/META-spec-v1.3.html
+generated_by: Module::Build version 0.2808
+
+
