--- a/META.yml
+++ b/META.yml
@@ -1,31 +1,20 @@
 --- #YAML:1.0
-name: Abstract-Meta-Class
-version: 0.07
+name:                Abstract-Meta-Class
+version:             0.08
 author:
   - 'Adrian Witas <adrian@webapp.strefa.pl>'
 abstract: Simple meta object protocol implementation.
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
+generated_by:        ExtUtils::MakeMaker version 6.3201
+distribution_type:   module
 requires:
-  perl: 5.6.1
-  Carp: 0
-build_requires:
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
-provides:
-Abstract::Meta::Class:
-  file: lib/Abstract/Meta/Class.pm
-  version: 0.07
-Abstract::Meta::Attribute:
-  file: lib/Abstract/Meta/Attribute.pm
-  version: 0.03
-Abstract::Meta::Class:
-  file: lib/Abstract/Meta/Class.pm
-  version: 0.04
+    perl:                          5.6.1
+    Carp:                          0
+    Test::More:                    0
+    Test::Pod:                     0
+    Test::Pod::Coverage:           0
 meta-spec:
-   version: 1.3
-   url: http://module-build.sourceforge.net/META-spec-v1.3.html
-generated_by: Module::Build version 0.2808
-
-
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
