--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Abstract-Meta-Class
-version:             0.08
+version:             0.09
 author:
   - 'Adrian Witas <adrian@webapp.strefa.pl>'
 abstract: Simple meta object protocol implementation.
@@ -15,6 +15,7 @@ requires:
     Test::More:                    0
     Test::Pod:                     0
     Test::Pod::Coverage:           0
+tests: t/*
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.2.html
     version: 1.2
